<resources>
    <string name="app_name">ToDo</string>
    <string name="newTaskTitle">New Task</string>
    <string name="homeTitle">Home</string>

    <!--Add Task-->
    <string name="task">Task</string>
    <string name="date">Due Date</string>
    <string name="description">Description</string>
    <string name="taskHint">Type your task here</string>
    <string name="dateHint">Pick the date here</string>
    <string name="descriptionHint">Type notes here</string>

    <!--listview-->
    <string name="task_title_listView">Task title</string>
    <string name="due_date_listView">Due date</string>

    <!--menu-->
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>
