<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ctseproject.rishnisewmi.todo.NewTaskActivity"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/task"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="132dp" />

    <EditText
        android:id="@+id/new_task_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/taskHint"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_task_txt"
        android:fontFamily="@font/roboto_regular"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/new_date_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/dateHint"
        android:inputType="textPersonName"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_date_txt"
        android:fontFamily="@font/roboto_regular"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/new_descrip_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/descriptionHint"
        android:inputType="textMultiLine"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:textSize="18sp" />
</RelativeLayout>
